# webscraping_scrapy_splash_selenium

./: .gitignore  README.md  pyproject.toml  requirements.txt
00_worldometers/: population_dataset.csv
00_worldometers/worldometers/: middlewares.py
01_national_debt/national_debt/: middlewares.py  pipelines.py
03_forbes/: dataset.csv  dataset.json
03_forbes/database/: charities.db
03_forbes/forbes/: settings.py
04_techcrunch/techcrunch/: middlewares.py
06_stockx/: dataset.json
06_stockx/stockx/: items.py  settings.py
07_stockx2/: scrapy.cfg
07_stockx2/stockx2/: items.py  pipelines.py  settings.py
08_us_stocks/: dataset.json  dataset_full.json
08_us_stocks/us_stocks/: middlewares.py  pipelines.py  settings.py
09_selenium_basics/: stocklist_sel.json  stocklist_sel_2.csv  stocklist_sel_2.json
09_selenium_basics/selenium_basics/: items.py  middlewares.py  settings.py
10_scrapy_selenium_basics/: example_2.json  example_3.json
10_scrapy_selenium_basics/scrapy_selenium_basics/: pipelines.py  settings.py
forbes/: dataset.json
forbes/forbes/: items.py  middlewares.py  settings.py
national_debt/national_debt/: settings.py
premier_league_fantasy/: scrapy.cfg
premier_league_fantasy/premier_league_fantasy/: items.py  middlewares.py  pipelines.py  settings.py
projects/archive/: vehicles2_test_spiders.py
projects/cannondale/: bikes_bs.py  (+1 more)
resources/: code_snippet.md  css_code.html
stockx/: dataset.json
stockx2/: dataset.json
techcrunch/: dataset.json  scrapy.cfg
tinydeal/: special_dataset.csv
worldometers/: population_dataset.json
(+89 files in other folders)
