[tool.poetry]
name = "webscraping-scrapy-selenium"
version = "0.1.0"
description = ""
authors = ["LucasO21 <clfo2014@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
pyarrow = "^16.1.0"
Scrapy = "^2.11.2"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
